manifests/app-whoami/whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: app-blue
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - port: 80
