manifests/app-whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: whoami.arekelo.net
    external-dns.alpha.kubernetes.io/target: 51707c3a-864b-4391-84a2-fc74820235b5.cfargotunnel.com
  name: whoami-ingress
  namespace: app-blue
spec:
  rules:
  - host: whoami.arekelo.net
    http:
      paths:
      - backend:
          service:
            name: whoami-svc
            port:
              number: 80
        path: /
        pathType: Prefix
